--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,17 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: classpath:mappers/*.xml
+
+wx:
+  appId: wxd898fcb01713c658
+  mchId: 1483469312
+  mchKey: 098F6BCD4621D373CADE4E832627B4F6
+  notifyUrl: http://xakhu8.natappfree.cc/pay/notify
+  returnUrl: http://127.0.0.1
+
+alipay:
+  appId: 123
+  privateKey: 123
+  publicKey: 123
+  notifyUrl: http://xakhu8.natappfree.cc/pay/notify
+  returnUrl: http://127.0.0.1
